# hexlet_pytest

./: pyproject.toml
tests/: test_stack.py
