[project]
name = "hexlet-pytest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_pytest"]